@@ -41,6 +41,38 @@ The template was indeed created::
 The variable ``buildout:directory`` was also substituted by a path.
 
 
+Using inline input
+==================
+
+For very short script it can make sense to put the source directly into
+`buildout.cfg`::
+
+  >>> write('buildout.cfg',
+  ... '''
+  ... [buildout]
+  ... parts = template
+  ... offline = true
+  ...
+  ... [template]
+  ... recipe = collective.recipe.template
+  ... input = #!/bin/bash
+  ...    echo foo
+  ... output = ${buildout:parts-directory}/template
+  ... ''')
+
+Now we can run buildout::
+
+  >>> print system(join('bin', 'buildout')),
+  Uninstalling template.
+  Installing template.
+
+The template should have been created::
+
+  >>> cat('parts', 'template')
+  #!/bin/bash
+  echo foo
+
+
 Creating a template in a variable path
 ======================================
 
