@@ -19,29 +19,26 @@ class Recipe:
             self.logger.error("No output file specified.")
             raise zc.buildout.UserError("No output file specified.")
 
-
+        self.output=options["output"]
         self.input=options["input"]
         if not os.path.exists(self.input):
-            msg="Input file '%s' does not exist." % self.input
-            self.logger.error(msg)
-            raise zc.buildout.UserError(msg)
-
-        self.output=options["output"]
-
-        source=open(self.input).read()
+            source=self.input
+            self.mode=None
+        else:
+            source=open(self.input).read()
+            self.mode=stat.S_IMODE(os.stat(self.input).st_mode)
         template=re.sub(r"\$\{([^:]+?)\}", r"${%s:\1}" % name, source)
         self.result=options._sub(template, [])
 
 
     def install(self):
-        mode=stat.S_IMODE(os.stat(self.input).st_mode)
-
         self.createIntermediatePaths(os.path.dirname(self.output))
         output=open(self.output, "wt")
         output.write(self.result)
         output.close()
 
-        os.chmod(self.output, mode)
+        if self.mode:
+            os.chmod(self.output, self.mode)
 
         self.options.created(self.output)
         return self.options.created()
