@@ -4,7 +4,8 @@ Changelog
 1.5 - unreleased
 ================
 
-- Nothing changed yet.
+* Add support for inline templates.
+  [witsch]
 
 
 1.4 - 2009-07-29
